--- a/bviper/Code/Builder/builder.swift.liquid
+++ b/bviper/Code/Builder/builder.swift.liquid
@@ -8,17 +8,17 @@
 
 import UIKit
 
-class {{ module_info.name }}ModuleBuilder {
+public class {{ module_info.name }}ModuleBuilder {
   weak var transitionHandler : UIViewController!
 
-  func setupModule() -> UIViewController{
+  public static func setupModule() -> UIViewController{
     let viewController = {{ module_info.name }}ViewController()
     configure(viewController: viewController)
     transitionHandler = viewController
     return viewController
   }
 
-  private func configure(viewController: {{ module_info.name }}ViewController) {
+  private static func configure(viewController: {{ module_info.name }}ViewController) {
     let router = {{ module_info.name }}Router()
 
     let presenter = {{ module_info.name }}Presenter()
