--- a/bviper/Code/Builder/builder.swift.liquid
+++ b/bviper/Code/Builder/builder.swift.liquid
@@ -25,6 +25,8 @@ public class {{ module_info.name }}ModuleBuilder {
 
     let interactor = {{ module_info.name }}Interactor()
     interactor.output = presenter
+    interactor.api = {{ module_info.name }}ApiDataManager()
+    interactor.local = {{ module_info.name }}LocalDataManager()
 
     presenter.interactor = interactor
     viewController.output = presenter
