--- a/bviper/Code/Presenter/presenter.swift.liquid
+++ b/bviper/Code/Presenter/presenter.swift.liquid
@@ -14,6 +14,7 @@ class {{ module_info.name }}Presenter
   weak var view: {{ module_info.name }}ViewInput!
   var interactor: {{ module_info.name }}InteractorInput!
   var router: {{ module_info.name }}RouterInput!
+  var outer: {{ module_info.name }}ModuleOutput?
 }
 
 extension {{ module_info.name }}Presenter: {{ module_info.name }}ModuleInput{
