--- a/bviper/Code/View/viewcontroller.swift.liquid
+++ b/bviper/Code/View/viewcontroller.swift.liquid
@@ -10,6 +10,7 @@ import UIKit
 
 class {{ module_info.name }}ViewController: UIViewController{
   var output: {{ module_info.name }}ViewOutput!
+  var moduleInput: {{ module_info.name }}ModuleInput!
 
   // MARK: Life cycle
   override func viewDidLoad() {
