add ModuleInput and remove DataManager
1, hook ModuleInput on View, so lift cycle management is simple.
2, remove DataManager, all biz data from unique trusted data source, any change should be pass to unique trusted data source with action/command

--- a/bviper/Code/Builder/builder.swift.liquid
+++ b/bviper/Code/Builder/builder.swift.liquid
@@ -38,7 +38,7 @@ public class {{ module_info.name }}ModuleBuilder {
     viewController.output = presenter
     viewController.moduleInput = presenter as? {{ module_info.name }}ModuleInput
 
-    return presenter as {{ module_info.name }}ModuleInput
+    return viewController as! {{ module_info.name }}ModuleInput
   }
 
 }
