--- a/bviper/Code/DataManager/entry.swift.liquid
+++ b/bviper/Code/DataManager/entry.swift.liquid
@@ -6,8 +6,6 @@
 //  Copyright © {{ year }} {{ developer.company }}. All rights reserved.
 //
 
-import UIKit
-
-public class {{ module_info.name }}Item {
+public struct {{ module_info.name }}Entry {
 
 }
