--- a/bviper/Tests/Builder/builder_tests.swift.liquid
+++ b/bviper/Tests/Builder/builder_tests.swift.liquid
@@ -22,24 +22,30 @@ class {{ module_info.name }}ModuleConfiguratorTests: XCTestCase {
   }
 
   func testModuleBuilder() {
-      // given
+    // given
 
-      // when
-      let viewController = {{ module_info.name }}ModuleBuilder.setupModule() as! {{ module_info.name }}ViewController
+    // when
+    let viewController = {{ module_info.name }}ModuleBuilder.setupModule() as! {{ module_info.name }}ViewController
+    let module = {{ module_info.name }}ModuleBuilder.setupModule(handler: nil)
+    let viewController = module.viewController
+    let input = module.input
 
-      //then
-      XCTAssertNotNil(viewController.output, "{{ module_info.name }}ViewController is nil after builder")
-      XCTAssertTrue(viewController.output is {{ module_info.name }}Presenter, "output is not {{ module_info.name }}Presenter")
+    //then
+    XCTAssertNotNil(viewController, "got nil viewController")
+    XCAssertTrue(input is {{ module_info.name }}ModuleInput, "input must be a {{ module_info.name }}ModuleInput")
 
-      let presenter: {{ module_info.name }}Presenter = viewController.output as! {{ module_info.name }}Presenter
-      XCTAssertNotNil(presenter.view, "view in {{ module_info.name }}Presenter is nil after builder")
-      XCTAssertNotNil(presenter.router, "router in {{ module_info.name }}Presenter is nil after builder")
-      XCTAssertTrue(presenter.router is {{ module_info.name }}Router, "router is not {{ module_info.name }}Router")
+    XCTAssertNotNil(viewController.output, "{{ module_info.name }}ViewController is nil after builder")
+    XCTAssertTrue(viewController.output is {{ module_info.name }}Presenter, "output is not {{ module_info.name }}Presenter")
 
-      let interactor: {{ module_info.name }}Interactor = presenter.interactor as! {{ module_info.name }}Interactor
-      XCTAssertNotNil(interactor.output, "output in {{ module_info.name }}Interactor is nil after builder")
+    let presenter: {{ module_info.name }}Presenter = viewController.output as! {{ module_info.name }}Presenter
+    XCTAssertNotNil(presenter.view, "view in {{ module_info.name }}Presenter is nil after builder")
+    XCTAssertNotNil(presenter.router, "router in {{ module_info.name }}Presenter is nil after builder")
+    XCTAssertTrue(presenter.router is {{ module_info.name }}Router, "router is not {{ module_info.name }}Router")
 
-      let router = presenter.router as! {{ module_info.name }}Router
-      XCTAssertNotNil(router.transitionHandler, "handler of router is nil after builder")
+    let interactor: {{ module_info.name }}Interactor = presenter.interactor as! {{ module_info.name }}Interactor
+    XCTAssertNotNil(interactor.output, "output in {{ module_info.name }}Interactor is nil after builder")
+
+    let router = presenter.router as! {{ module_info.name }}Router
+    XCTAssertNotNil(router.transitionHandler, "handler of router is nil after builder")
   }
 }
