--- a/bviper/Code/View/viewcontroller.swift.liquid
+++ b/bviper/Code/View/viewcontroller.swift.liquid
@@ -9,12 +9,22 @@
 import UIKit
 
 class {{ module_info.name }}ViewController: UIViewController{
-  var output: {{ module_info.name }}ViewOutput!
+    var output: {{ module_info.name }}ViewOutput!
 
-  // MARK: Life cycle
-  override func viewDidLoad() {
-    super.viewDidLoad()
-  }
+    // MARK: Life cycle
+    override func viewDidLoad() {
+        super.viewDidLoad()
+    }
+
+    override func viewDidAppear(_ animated: Bool) {
+        super.viewDidAppear(animated)
+        output.subscribe()
+    }
+
+    override func viewWillDisappear(_ animated: Bool) {
+        super.viewWillDisappear(animated)
+        output.unsubscribe()
+    }
 }
 
 extension {{ module_info.name }}ViewController: {{module_info.name}}ViewInput {
