--- a/bviper/Code/Entity/entity.swift.liquid
+++ b/bviper/Code/Entity/entity.swift.liquid
@@ -6,6 +6,6 @@
 //  Copyright © {{ year }} {{ developer.company }}. All rights reserved.
 //
 
-public struct {{ module_info.name }}Entry {
+public struct {{ module_info.name }}Entity {
 
 }
